styles/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  font-family: "Inter", serif;
  font-optical-sizing: auto;
}

.expandable-nav {
  display: flex;
  gap: 0.5rem;
}

.expandable-nav::after {
  content: url(../images/down-arrow.svg);
  display: block;
  clear: both;
}

.collaborate-banner {
  @apply text-5xl leading-[3.5rem] font-bold flex flex-col text-center items-end mx-auto max-w-md relative;
}

.collaborate-banner::before {
  content: "Your idea starts here";
  @apply text-sm py-2 bg-tertiary text-black uppercase rounded-xl px-4 font-bold rotate-12 w-fit -right-12 absolute -top-12;
}

.container {
  @apply desktop-small:mx-auto mx-4 max-w-screen-desktop-small flex flex-col;
}

.list-check {
  @apply text-on-surface text-lg flex flex-col gap-4;
}

.list-check > li {
  @apply flex gap-2;
}
.list-check > li::before {
  content: url(../images/check.svg);
  display: inline-block;
  color: black;
  margin-right: 0.5rem;
}

